--- a/index.html
+++ b/index.html
@@ -11,6 +11,55 @@
 <body>
     <main>
         <h1>Welcome to Dice Duel</h1>
+        <div class="container">
+            <div class="cube">
+                <div class="cube-face front">
+                    <div class="inside">
+                        <span class="dot"></span>
+                    </div>
+                </div>
+                <div class="cube-face back">
+                    <div class="inside">
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                    </div>
+                </div>
+                <div class="cube-face left">
+                    <div class="inside">
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                    </div>
+                </div>
+                <div class="cube-face right">
+                    <div class="inside">
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                    </div>
+                </div>
+                <div class="cube-face top">
+                    <div class="inside">
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                    </div>
+                </div>
+                <div class="cube-face bottom">
+                    <div class="inside">
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <div class="tooltip-container rules-btn">
