--- a/index.html
+++ b/index.html
@@ -11,6 +11,58 @@
 <body>
     <main>
         <h1>Welcome to Dice Duel</h1>
+
+        <div class="table-styled">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Turno</th><td>Judador 1</td> 
+                    </tr>
+                </thead>
+                <thead>
+                    <tr>
+                        <th>Ronda</th><td>2</td>
+                    </tr>
+                </thead>
+
+            </table>
+        </div>
+
+        <div class="table-players">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Jugador 1</th><th>Jugador 2</th>
+                    </tr>
+                </thead>
+                <tr>
+                    <td>5 pts</td><td>3 pts</td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="table-history">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Fecha</th><th>Jugador 1</th><th>Jugador 2</th>
+                    </tr>
+                </thead>
+                <tr>
+                    <td>1 Enero</td><td>5 pts</td><td>3 pts</td>
+                </tr>
+                <tr>
+                    <td>1 Enero</td><td>5 pts</td><td>3 pts</td>
+                </tr>
+                <tr>
+                    <td>1 Enero</td><td>5 pts</td><td>3 pts</td>
+                </tr>
+                <tr>
+                    <td>1 Enero</td><td>5 pts</td><td>3 pts</td>
+                </tr>
+            </table>            
+        </div>
+
         <div class="container">
             <div class="cube">
                 <div class="cube-face front">
