feat: Interactive table of rounds and turns

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Turno</th><td>Judador 1</td> 
+                        <th>Turn</th><td id="player-turn">Player 1</td> 
                     </tr>
                 </thead>
                 <thead>
                     <tr>
-                        <th>Ronda</th><td>2</td>
+                        <th>Round</th><td id="game-round">1</td>
                     </tr>
                 </thead>
 
@@ -32,7 +32,7 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Jugador 1</th><th>Jugador 2</th>
+                        <th>Player 1</th><th>Player 2</th>
                     </tr>
                 </thead>
                 <tr>
@@ -45,7 +45,7 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Fecha</th><th>Jugador 1</th><th>Jugador 2</th>
+                        <th>Fecha</th><th>Player 1</th><th>Player 2</th>
                     </tr>
                 </thead>
                 <tr>
@@ -112,6 +112,8 @@
                 </div>
             </div>
         </div>
+
+        <button id="roll-dice">Roll dice</button>
     </main>
 
     <div class="tooltip-container rules-btn">
