Actualizacion de Tabla Sumarotia

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </tr>
                 </thead>
                 <tr>
-                    <td>5 pts</td><td>3 pts</td>
+                    <td id="player1">0 pts</td><td id="player2">0 pts</td>
                 </tr>
             </table>
         </div>
