--- a/index.html
+++ b/index.html
@@ -48,18 +48,7 @@
                         <th>Fecha</th><th>Player 1</th><th>Player 2</th>
                     </tr>
                 </thead>
-                <tr>
-                    <td>1 Enero</td><td>5 pts</td><td>3 pts</td>
-                </tr>
-                <tr>
-                    <td>1 Enero</td><td>5 pts</td><td>3 pts</td>
-                </tr>
-                <tr>
-                    <td>1 Enero</td><td>5 pts</td><td>3 pts</td>
-                </tr>
-                <tr>
-                    <td>1 Enero</td><td>5 pts</td><td>3 pts</td>
-                </tr>
+                <tbody id="history-body"></tbody>
             </table>            
         </div>
 
