Creacion de Tabla historial

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Fecha</th><th id="tbl-history-player1">Player 1</th><th id="tbl-history-player2">Player 2</th>
+                        <th>Turno</th><th id="tbl-history-player1">Player 1</th><th id="tbl-history-player2">Player 2</th>
                     </tr>
                 </thead>
                 <tbody id="history-body"></tbody>
